src/style/videopromote.css
.videoPromoteWrapper{
    background: #D9D9D9;
}
.videoTextWrapper p{
    text-align: justify;
}

.videoPromoteTitle{
    font-size: 32px;
}

.videoPromoteTitle::after{
    content: '';
    display: block;
    width: 210px;
    margin-top: 10px;
    border-bottom: 3px solid #045E18;
}

.videoFrame{
    width: 700px;
    height: 340px;
}

@media only screen and (max-width: 770px){
    .videoPromoteWrapper iframe{
        width: 100%;
        height: 200px;
        text-align: center;
    }

    .videoPromoteRow{
        flex-direction: column;
    }
}

@media only screen and (max-width: 1200px){
    .videoPromoteRow{
        flex-direction: column;
    }
}

